Bug 521793 - Keyboard turns blue on login
Summary: Keyboard turns blue on login
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Startup process (other bugs)
Version First Reported In: 6.7.0
Platform: CachyOS Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2026-06-19 20:32 UTC by Redageddon
Modified: 2026-07-17 19:21 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Redageddon 2026-06-19 20:32:51 UTC
DESCRIPTION
I updated to plasma 6.7. When I turned my pc off then back on again, logging in turns my keyboard blue. 
disconnecting my kb and plugging it back in turns it back to normal. 

STEPS TO REPRODUCE
1. run dbus-run-session startplasma-wayland
2. keyboard turns blue after about 2 seconds
This happens 100% of the time and is 100% reproducable

OBSERVED RESULT
Keyboard changes color

EXPECTED RESULT
Key board should NEVER change color, as I want it to stick the the static color it has been for years.

SOFTWARE/OS VERSIONS
Operating System: CachyOS Linux 
KDE Plasma Version: 6.7.0
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.0.12-1-cachyos-bore (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 9600X 6-Core Processor
Memory: 32 GiB of RAM (30.5 GiB usable)
Graphics Processor 1: NVIDIA GeForce RTX 5070/PCIe/SSE2
Graphics Processor 2: NVIDIA GeForce RTX 5070/PCIe/SSE2
Comment 1 swh 2026-06-21 15:26:39 UTC
Can confirm the same behavior on my keychhron k3 pro. The backlight is normally red. As soon as I log in of SDDM, it changes to white/blue. I also ran the command `dbus-run-session startplasma-wayland`, and the exact same thing happened.
Comment 2 Tim Elmer 2026-06-27 19:05:43 UTC
Restarting the keyboard (Keychron V6) resets it back to the configured color, at least temporarily.
Comment 3 swh 2026-06-28 07:07:15 UTC
(In reply to Tim Elmer from comment #2)
> Restarting the keyboard (Keychron V6) resets it back to the configured
> color, at least temporarily.

I had almost forgotten about this issue. In the menu bar, under Brightness and Color -> Keyboard Color -> uncheck “Include Accent Color.” Log out and back in. Reset the Keychron with Fn+J+Z, and everything works again.

https://discuss.kde.org/t/keychron-keybord-lost-backgroundlight-after-login-into-plasma-6-7/48023
Comment 4 Tim Elmer 2026-06-28 07:12:38 UTC
(In reply to swh from comment #3)
> I had almost forgotten about this issue. In the menu bar, under Brightness
> and Color -> Keyboard Color -> uncheck “Include Accent Color.” Log out and
> back in. Reset the Keychron with Fn+J+Z, and everything works again.

In the system tray? I don't even have a "Keyboard Color" section.
Comment 5 Nate Graham 2026-06-28 19:46:30 UTC
Redageddon, does your "Brightness and Color" widget in the system tray have a section to apply an accent color to the keyboard LEDs?

If so, does the issue go away if you turn that off?
Comment 6 Redageddon 2026-06-28 22:23:16 UTC
(In reply to Nate Graham from comment #5)
> Redageddon, does your "Brightness and Color" widget in the system tray have
> a section to apply an accent color to the keyboard LEDs?
> 
> If so, does the issue go away if you turn that off?

Technocally no, that just turns my keyboard white. If i reset my kb after that, it seems to not get overriden.
Comment 7 Nate Graham 2026-06-29 02:56:48 UTC
Please run `kcmshell6 kcm_kded` in a terminal app. In the window that appears, turn off the "Kameleon" service and restart. Then open that window again and verify it's remained off. Has the issue now gone away?
Comment 8 Tim Elmer 2026-06-29 21:39:40 UTC
(In reply to Nate Graham from comment #7)
> Please run `kcmshell6 kcm_kded` in a terminal app. In the window that
> appears, turn off the "Kameleon" service and restart. Then open that window
> again and verify it's remained off. Has the issue now gone away?

This doesn't help on Fedora 44, Plasma 6.7.1. According to kcm_kded, the Kameleon service still starts even when disabled, and the keyboard color changes shortly after logging in.
Comment 9 Oliver Beard 2026-06-30 15:58:53 UTC
If it doesn't autoload, the applet will load it, either on creation or on opening.

It would be expected that turning the option off in the applet should no longer cause the accent color to be applied.

>Technocally no, that just turns my keyboard white. If i reset my kb after that, it seems to not get overriden.

It is expected that it would never be overriden again. Does it?
Comment 10 Bug Janitor Service 2026-06-30 16:00:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/1087
Comment 11 Tim Elmer 2026-07-02 01:25:47 UTC
(In reply to Oliver Beard from comment #9)
> If it doesn't autoload, the applet will load it, either on creation or on
> opening.

That's good to know. I think my earlier report of Kameleon starting itself when disabled was due to me opening the "Brightness & Color" system tray menu. As aforementioned, I don't have a widget in said menu for Kameleon, but the second I open the menu, Kameleon starts and my keyboard turns blue.

I'll try to check my work desktop tomorrow (mostly the same hardware, but the widget *does* appear) to see if it behaves the same way.
Comment 12 Oliver Beard 2026-07-02 23:01:55 UTC
Git commit 598acc90851734ab7f8bb0eca63f170ea0fd3eeb by Oliver Beard.
Committed on 02/07/2026 at 22:55.
Pushed by olib into branch 'master'.

kdeds/kameleon: Disable kameleon by default

Users are seeing unexpected changes to keyboard colour, and this has resulted in feedback.

Disable Kameleon by default, so that accent colour syncing does not occur by default.
FIXED-IN: 6.7.3

M  +1    -1    kdeds/kameleon/kameleon.cpp
M  +1    -1    kdeds/kameleon/kameleon.h

https://invent.kde.org/plasma/kdeplasma-addons/-/commit/598acc90851734ab7f8bb0eca63f170ea0fd3eeb
Comment 13 Oliver Beard 2026-07-02 23:02:08 UTC
Git commit 1c9b5c7fd866f04e4390f043c75131a3b365523a by Oliver Beard.
Committed on 02/07/2026 at 23:02.
Pushed by olib into branch 'Plasma/6.7'.

kdeds/kameleon: Disable kameleon by default

Users are seeing unexpected changes to keyboard colour, and this has resulted in feedback.

Disable Kameleon by default, so that accent colour syncing does not occur by default.
FIXED-IN: 6.7.3


(cherry picked from commit 598acc90851734ab7f8bb0eca63f170ea0fd3eeb)

Co-authored-by: Oliver Beard <olib141@outlook.com>

M  +1    -1    kdeds/kameleon/kameleon.cpp
M  +1    -1    kdeds/kameleon/kameleon.h

https://invent.kde.org/plasma/kdeplasma-addons/-/commit/1c9b5c7fd866f04e4390f043c75131a3b365523a
Comment 14 Nate Graham 2026-07-17 19:21:24 UTC
Git commit 93a221bcdf6c87e6e2dd19cba658f32694e1c433 by Nate Graham.
Committed on 17/07/2026 at 17:05.
Pushed by ngraham into branch 'Plasma/6.6'.

kdeds/kameleon: Disable kameleon by default

Users are seeing unexpected changes to keyboard colour, and this has resulted in feedback.

Disable Kameleon by default, so that accent colour syncing does not occur by default.
FIXED-IN: 6.7.3


(cherry picked from commit 598acc90851734ab7f8bb0eca63f170ea0fd3eeb)

Co-authored-by: Oliver Beard <olib141@outlook.com>

M  +1    -1    kdeds/kameleon/kameleon.cpp
M  +1    -1    kdeds/kameleon/kameleon.h

https://invent.kde.org/plasma/kdeplasma-addons/-/commit/93a221bcdf6c87e6e2dd19cba658f32694e1c433