kdeds/kameleon: Disable kameleon by default

Users are seeing unexpected changes to keyboard colour, and this has resulted in feedback.

Disable Kameleon by default, so that accent colour syncing does not occur by default.

BUG: 521793
FIXED-IN: 6.7.3


(cherry picked from commit 598acc90851734ab7f8bb0eca63f170ea0fd3eeb)

Co-authored-by: Oliver Beard <olib141@outlook.com>