kdeds/kameleon/kameleon.h
@@ -38,7 +38,7 @@ Q_SIGNALS:
     void supportedChanged();
 
 private:
-    bool m_enabled = true;
+    bool m_enabled = false;
     QColor m_accentColor = QColor(QColorConstants::White);
 
     KSharedConfig::Ptr m_config;
